--- a/assets/css/sidebar-promo.css
+++ b/assets/css/sidebar-promo.css
@@ -59,7 +59,8 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (max-width: var(--w-table)) {
+  /* @media (max-width: 1024px) { */
   .sidebar {
     margin-top: 60px;
   }
